# loom

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: README.md  settings.json
.claude/commands/: loom-check.md  loom-node.md  loom-pty.md
.codegraph/: .gitignore
.codex/: README.md  config.toml
.codex/prompts/: design-token.md  pty-provider.md
docs/: PRD.md  PROVIDERS.md  TROUBLESHOOTING.md  multi-project-workspace.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/croxy/: api_debug.rs  args.rs  backends.rs  claude_prompts.rs  engine.rs  message_assembler.rs  mod.rs  output.rs  pid_watcher.rs  pty.rs  session.rs  stdin_reader.rs  transcript_events.rs  transcript_observer.rs
src-tauri/src/git/: mod.rs
src-tauri/src/graph/: engine.rs  types.rs
src-tauri/src/pty/: ansi.rs  completion.rs  manager.rs  mod.rs  providers.rs  renderer.rs  text.rs  transcript.rs  utf8.rs
src-tauri/src/repository/: mod.rs
src-tauri/src/review/: mod.rs
src-tauri/src/templates/: mod.rs
src-tauri/src/workspace/: mod.rs
src/core/: agent-node.ts  index.ts  project.test.ts  project.ts  projectId.ts  task-graph.ts  workdir.ts
src/modes/: AgentRunView.tsx  AutoMode.tsx  CommandPalette.tsx  PlanMode.tsx  SingleMode.tsx  TerminalOutput.tsx  commandPaletteModel.test.ts  commandPaletteModel.ts  hangulComposer.ts
src/providers/: index.ts  types.ts
src/stores/: executionStore.ts  graphStore.ts  (+8 more)
tui/: tsconfig.json
(+71 files in other folders)
